Mon Jan 11 20:34:15 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorDataStorage.cpp:

          BuiltinTopic sample handling refactor complete.  Added
          Subscription, Topic, and DomainParticipant implementations in
          same style as the Publication BuiltinTopic sample handling.

Mon Jan 11 17:28:48 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorTask.h:
        * tools/odds_monitor/MonitorTask.cpp:

          builtinTopicUpdate()
            - new method to handle BuiltinTopic sample updates
              differently from the instrumentation samples.  This method
              calls the 'read' rather than 'take' interface.
          dispatchReader()
            - dispatch the BuiltinTopic samples to the new method rather
              than processing them as instrumentation samples.
          createBuiltinSubscription()
            - reenabled hanlding BuilinTopic samples

        * tools/odds_monitor/QosFormatter.cpp:

          Added the value to the disply string if an invalid enumeration
          value is detected.

Mon Jan 11 04:25:47 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Made BIT transport configured with datalink_release_delay=0.
          The BIT does not need this parameter which is used for performance
          improvement during reconnecting. It also solved odds_monitor
          hang during repo switch issue.

Sat Jan  9 22:21:20 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/run_test.pl:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/run_test.pl:

          Updated DDS_Run_Test module to new PerlDDS::Run_Test.

Fri Jan  8 23:46:31 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h: